# wormgear

./: .gitignore  .vercelignore  CALCULATOR_RESTORATION_PLAN.md  CHANGELOG.md  CLAUDE.md  CREATE_PR.md  DD_CUT_CODE_REVIEW.md  DEPLOYMENT.md  FOR_USER.md  GLOBOID_COMPLETE.md  GLOBOID_QUICKSTART.md  PR_DESCRIPTION.md  README.md  REFACTORING_COMPLETE.md  TECH_DEBT_PLAN.md  TODO.md  VIRTUAL_HOBBING_DEBUG.md  VIRTUAL_HOBBING_SOLUTION.md  coverage-baseline-fast.txt  improv.md  pyproject.toml  slow-test-durations-baseline.txt  test_legacy_vs_unified.py  vercel.json  wheel_m0.5_z12.3mf
.github/workflows/: ci.yml  deploy-web.yml  publish.yml  test-web-build.yml  web-wasm-test.yml
docs/: ARCHITECTURE.md  DESIGN_UI_REDESIGN.md  DEVELOPMENT_ROADMAP.md  GEOMETRY.md  GLOBOID_EVALUATION.md  JSON_SCHEMA_ANALYSIS.md  JSON_SCHEMA_V1.md  MIGRATION_PLAN.md  MIGRATION_STATUS.md  MIGRATION_SUMMARY.md  PLAN_DRY_REMEDIATION.md  PLAN_RIM_THICKNESS_MEASUREMENT.md  PLAN_WORM_SWEEP.md  PROFILE_TYPES.md  TECH_DEBT_REMEDIATION_PLAN.md  VALIDATION.md  WEB_TOOL_SPEC_V2.md  WORMGEARCALC_ANALYSIS.md  WORMGEARCALC_UPDATE_PROMPT.md
examples/: 7mm-glob.json  7mm.json  7mm_glob.json  README.md  compare_cylindrical_vs_globoid.py  globoid_7mm.py  globoid_7mm_increased_ratio.py  globoid_pair.py  globoid_pair_proper.py  globoid_with_custom_length.py  sample_m2_ratio30.json  tiny_7mm.json  unified_workflow.py  wormgear_colab.ipynb  wormgear_colab_geometry.ipynb
schemas/: assembly-params-v2.0.json  assembly-params-v2.1.json  enums-v2.0.json  enums-v2.1.json  features-v2.0.json  features-v2.1.json  manufacturing-params-v2.0.json  manufacturing-params-v2.1.json  measured-geometry-v2.0.json  measured-geometry-v2.1.json  mesh-alignment-v2.1.json  wheel-params-v2.0.json  wheel-params-v2.1.json  worm-params-v2.0.json  worm-params-v2.1.json  wormgear-design-v2.0.json  wormgear-design-v2.1.json
scripts/: compare_step.py  export_sample_gltf.py  generate_comparison_steps.py  generate_schemas.py  generate_types.sh  publish.sh  record_golden_volumes.py  typecheck.sh
src/wormgear/: __init__.py  enums.py  facade.py
src/wormgear/advanced/: __init__.py  virtual_hobbing.py
src/wormgear/calculator/: __init__.py  bore_calculator.py  check_mesh.py  constants.py  core.py  enums.py  js_bridge.py  json_schema.py  output.py  validation.py
src/wormgear/cli/: generate.py
src/wormgear/core/: __init__.py  bore_sizing.py  features.py  geometry_base.py  geometry_repair.py  globoid_worm.py  mesh_alignment.py  rim_thickness.py  validate_geometry.py  virtual_hobbing.py  wheel.py  worm.py
src/wormgear/io/: __init__.py  loaders.py  package.py  schema.py
src/wormgear_geometry/: __init__.py  cli.py  features.py  globoid_worm.py  io.py  virtual_hobbing.py  wheel.py  worm.py
src/wormgear_geometry/calculations/: README.md  __init__.py  globoid.py  schema.py
tests/: __init__.py  conftest.py  pydantic-pyodide-test.html  test_advanced.py  test_bore_calculation.py  test_calculator.py  test_calculator_standalone.py  test_check_mesh.py  test_cli.py  test_cli_python_parity.py  test_deprecation.py  test_exception_handling.py  test_facade.py  test_features.py  test_features_fast.py  test_full_pipeline.py  test_geometry_base.py  test_geometry_determinism.py  test_geometry_realizes_spec.py  test_geometry_repair.py  test_globoid_worm.py  test_golden_volumes.py  test_integration.py  test_io.py  test_js_bridge.py  test_json_schema.py  test_layering.py  test_make_pair.py  test_mesh_alignment.py  test_output.py  test_pipeline_integration.py  test_pyodide_simulation.py  test_reference_validation.py  test_rim_thickness.py  test_standard_module_rounding.py  test_torture.py  test_validation.py  test_validation_messages.py  test_virtual_hobbing.py  test_web_build.py  (+5 more)
tests/helpers/: __init__.py  geometry_sampling.py
web/: .gitignore  BUILD.md  CURRENT_STATUS.md  MAINTAINING.md  PYODIDE_INTEGRATION.md  README.md  REFACTORING.md  RUNTIME_FIXES.md  SETUP_OCP.md  SOLUTION_FOUND.md  TEST_REFACTORING.md  WHEEL_SEARCH_RESULTS.md  animation-prototype.html  app-backup.js  app-lazy.js  app.js  build-wheel.sh  build.sh  generator-worker.js  index.html  package-lock.json  package.json  performance-test.html  pydantic-test.html  serve.py  style.css  tsconfig.json  wormgear-pyodide.js
web/modules/: bore-calculator.js  format-utils.js  generator-ui.js  parameter-handler.js  pyodide-init.js  schema-validator.js  validation-ui.js  viewer-3d.js
web/src/: __init__.py
web/src/calculator/: __init__.py
web/src/cli/: __init__.py
web/tests/: README.md  test-runner.html  test-suite.js
web/types/: enums.generated.d.ts  wormgear-design.generated.d.ts
web/wormcalc/: core.py  js_bridge.py  output.py  validation.py
(+11 files in other folders)
