[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wormgear"
version = "0.0.7"
description = "Unified worm gear calculator and CNC-ready 3D geometry generator"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Paul Fremantle", email = "paul@fremantle.org"}
]
keywords = ["worm gear", "gear calculator", "CAD", "build123d", "CNC", "STEP", "manufacturing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "build123d>=0.6.0",
    "click>=8.0",  # For CLI
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
]

[project.scripts]
# New unified CLI (to be implemented)
wormgear = "wormgear.cli.main:main"
# Backwards compatible generator CLI
wormgear-geometry = "wormgear.cli.generate:main"

[project.urls]
Homepage = "https://wormgear.studio"
Documentation = "https://github.com/pzfreo/wormgear/blob/main/README.md"
Repository = "https://github.com/pzfreo/wormgear"
Issues = "https://github.com/pzfreo/wormgear/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W"]
